@@ -1,27 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/TVGEV.R
-\name{coef.TVGEV}
-\alias{coef.TVGEV}
-\title{Coefficients of a \code{TVGEV} object}
-\usage{
-\method{coef}{TVGEV}(object, type = c("psi", "theta"), ...)
-}
-\arguments{
-\item{object}{A \code{TVGEV} object.}
-
-\item{type}{Character. When \code{"psi"}, the vector of model
-parameters is returned. When instead \code{type} is \code{"theta"},
-the matrix of GEV parameters is returned, with one row by block
-(or observation) and one column for each of the GEV parameters
-\code{"loc"}, \code{"scale"} and \code{"shape"}.}
-
-\item{...}{Not used yet.}
-}
-\value{
-Vector \eqn{\mathbf{\psi}}{\psi} of coefficients, or
-matrix with the GEV parameters \eqn{\mathbf{\theta}_i}{\theta_i}
-as its rows.
-}
-\description{
-Extract the vector of coefficients from a \code{TVGEV} object.
-}
